<resources>
    <string name="app_name" translatable="false">EmoMind</string>
    <string name="add_activity" translatable="true">Добавить занятие</string>
    <string name="difficulty_level" translatable="true">Уровень сложности</string>
    <string name="activity_name_hint" translatable="true">Название занятия</string>
    <string name="duration_hint" translatable="true">Длительность (чч:мм)</string>
    <string name="comments_hint" translatable="true">Комментарии к занятию</string>
    <string name="category" translatable="true">Категория</string>
    <string name="add_activity_button" translatable="true">Добавить занятие</string>
    <string name="tag_prompt" translatable="true">Выберите категорию</string>
    <string name="fill_all_fields">Пожалуйста, заполните все поля</string>
    <string name="incorrect_time_format">Введите длительность в корректном формате чч:мм</string>
    <string name="activity_added">Занятие добавлено</string>
    <string name="error_adding_activity">Ошибка при добавлении занятия</string>

    <string name="add_mood" translatable="true">Добавить настроение</string>
    <string name="enter_comment_hint" translatable="true">Введите комментарий</string>
    <string name="emotion_prompt" translatable="true">Выберите эмоции</string>
    <string name="choose_emotions" translatable="true">Выберите эмоции</string>
    <string name="save" translatable="true">Сохранить</string>
    <string name="login_error">Ошибка: логин не передан</string>
    <string name="user_not_found_error">Ошибка: пользователь не найден</string>
    <string name="no_mood_selected_error">Ошибка: настроение не выбрано</string>
    <string name="mood_saved_success">Настроение успешно сохранено</string>
    <string name="mood_save_error">Ошибка сохранения настроения</string>
    <string name="select_emotions_title">Выберите эмоции</string>
    <string name="done_button">Готово</string>
    <string name="cancel_button">Отмена</string>
    <string name="selected_mood_horrible">Выбрано настроение: Ужасно</string>
    <string name="selected_mood_bad">Выбрано настроение: Плохо</string>
    <string name="selected_mood_okay">Выбрано настроение: Так себе</string>
    <string name="selected_mood_good">Выбрано настроение: Хорошо</string>
    <string name="selected_mood_super">Выбрано настроение: Супер</string>

    <string name="account_deleted_successfully">Аккаунт успешно удален</string>
    <string name="failed_to_delete_account">Не удалось удалить аккаунт</string>

    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="profile_update_error">Error updating profile</string>

    <string name="please_select_filters">Пожалуйста, выберите фильтры</string>
    <string name="error_getting_date_range">Ошибка в получении диапазона дат</string>
    <string name="no_mood_data">Нет данных по настроению за выбранный период</string>
    <string name="no_notes">Нет заметок за выбранный период</string>
    <string name="no_activities">Нет занятий за выбранный период</string>
    <string name="no_goals">Нет целей за выбранный период</string>
    <string name="delete_confirmation_title">Удалить запись?</string>
    <string name="delete_confirmation_message">Вы уверены, что хотите удалить эту запись?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="mood_label">Настроение: %1$s\nДата: %2$s\nКомментарий: %3$s\nЭмоции: %4$s\n\n</string>
    <string name="note_label">Тема: %1$s\nКомментарий: %2$s\nДата: %3$s\n\n</string>
    <string name="activity_label">Название: %1$s\nКатегория: %2$s\nИнтенсивность: %3$s\nДлительность: %4$s\nКомментарии: %5$s\n\n</string>
    <string name="goal_label">Цель: %1$s\nСрок: %2$s\nЗаметки: %3$s\n\n</string>

    <string name="add_note" translatable="true">Добавить заметку</string>
    <string name="topic_prompt" translatable="true">Выберите тему</string>
    <string name="note_error">Ошибка при сохранении заметки</string>

    <string name="login" translatable="true">ВОЙТИ</string>
    <string name="login_hint" translatable="true">Логин</string>
    <string name="password_hint" translatable="true">Пароль</string>
    <string name="login_button" translatable="true">Войти</string>
    <string name="register_prompt" translatable="true">Нет аккаунта? Зарегистрироваться</string>
    <string name="english">Английский</string>
    <string name="russian">Русский</string>
    <string name="error_login">Неправильный логин или пароль</string>
    <string name="error_empty_login">Пожалуйста, введите ваш логин</string>
    <string name="error_empty_password">Пожалуйста, введите ваш пароль</string>

    <string name="set_goal" translatable="true">Установить цель</string>
    <string name="go_to_profile" translatable="true">Перейти в профиль</string>

    <string name="mood_analysis" translatable="true">Отчет по настроению</string>

    <string name="user_name" translatable="true">Имя пользователя</string>
    <string name="go_to_main" translatable="true">На главную</string>
    <string name="edit_profile" translatable="true">Редактировать профиль</string>
    <string name="notification_settings" translatable="true">Настройки уведомлений</string>
    <string name="mood_reminder" translatable="true">Напоминание о добавлении настроения</string>
    <string name="goals_reminder" translatable="true">Напоминание о целях</string>
    <string name="goal_reminder" translatable="true">Напоминание о цели</string>
    <string name="delete_account" translatable="true">Удалить аккаунт</string>
    <string name="sign_out" translatable="true">Выйти из аккаунта</string>
    <string name="profile_picture" translatable="false">Фото пользователя</string>
    <string name="set_time">Установить время</string>
    <string name="mood_reminder_time">Время напоминания о настроении</string>

    <string name="notification_set">Уведомление установлено на: %1$s</string>
    <string name="enter_valid_date">Введите дату в корректном формате (дд.мм.гг), не ранее следующего дня</string>
    <string name="goal_saved">Цель сохранена!</string>
    <string name="goal_save_error">Ошибка при сохранении цели</string>
    <string name="goal_reminder_title">Напоминание о цели</string>
    <string name="goal_reminder_text">Пора выполнить: %1$s</string>
    <string name="notification_permission_request">Пожалуйста, разрешите уведомления</string>

    <string name="editing" translatable="false">РЕДАКТИРОВАНИЕ</string>
    <string name="name_hint" translatable="true">Имя</string>
    <string name="confirm_password_hint" translatable="true">Подтверждение пароля</string>

    <string name="registration" translatable="false">РЕГИСТРАЦИЯ</string>
    <string name="password" translatable="false">Пароль (5 цифр)</string>
    <string name="create_account" translatable="false">Создать аккаунт</string>
    <string name="already_have_account" translatable="false">Уже есть аккаунт? Войти</string>
    <string name="confirm_password" translatable="false">Подтверждение пароля</string>
    <string name="error_adding_user">Ошибка при добавлении пользователя. Попробуйте еще раз</string>
    <string name="error_empty_fields">Пожалуйста, заполните все поля</string>
    <string name="name_exists">Имя пользователя уже существует.</string>
    <string name="set_goals" translatable="false">Установка целей</string>
    <string name="notes" translatable="false">Заметки</string>
    <string name="deadlines" translatable="false">Сроки (дд.мм.гг)</string>
    <string name="enter_goal" translatable="false">Введите цель</string>
    <string name="reminder" translatable="false">Напоминание (чч:мм)</string>
    <string name="save_goal" translatable="false">Сохранить цель</string>

    <string name="invalid_credentials">Неверные учётные данные!</string>
    <string name="username_exists">Такой логин уже существует! Придумайте другой</string>
    <string name="error_creating_account">Ошибка при создании аккаунта!</string>
    <string name="passwords_do_not_match">Пароли не совпадают!</string>
</resources>