<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBDE"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#24ADAD"
        android:text="@string/difficulty_level"
        android:textColor="#24ADAD"
        android:textColorLink="#24ADAD"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAddActivity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/image_2024_09_21_13_00_45" />

    <TextView
        android:id="@+id/textViewAddActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_activity"
        android:textColor="#24ADAD"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <Spinner
        android:id="@+id/spinnerTags"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner_shape"
        android:entries="@array/tags_array"
        android:prompt="@string/tag_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <EditText
        android:id="@+id/editTextActivityName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext_shape"
        android:hint="@string/activity_name_hint"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivity"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/editTextDuration"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_edittext_shape"
        android:hint="@string/duration_hint"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextComments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIntensity"
        app:layout_constraintVertical_bias="0.589"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/editTextComments"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext_shape"
        android:hint="@string/comments_hint"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <Spinner
        android:id="@+id/spinnerIntensity"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/buttonAddActivity"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_shape"
        android:padding="12dp"
        android:text="@string/add_activity_button"
        android:textColor="#EBEADB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextComments"
        app:layout_constraintVertical_bias="0.628" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#24ADAD"
        android:text="@string/category"
        android:textColor="#24ADAD"
        android:textColorLink="#24ADAD"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

</androidx.constraintlayout.widget.ConstraintLayout>